--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,35 @@
 .App {
     display: flex;
-    
+    width: 100vw;
+    height: 100vh;
+}
+.menubar-container {
+    background: white;
+    width: 12%;
+}
+
+.main-conatainer{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    background: #F8F8FF;
+    gap: 2rem;
+}
+.new{
+    width: 100vw;
+    height: 100vh;
+    position: fixed;
+    top: 0px;
+    right: 0px;
+    left: 0px;
+    bottom: 0px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: rgba(255, 255, 255, 0.26);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(5.6px);
+    -webkit-backdrop-filter: blur(5.6px);
+    overflow-y: scroll;
 }
